--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=7.1.0",
         "guzzlehttp/guzzle": "^6.3",
         "psr/log": "^1.0",
-        "unapi/unapi": "1.1.0"
+        "unapi/unapi": "1.1.0",
+        "unapi/helper-money": "^1.0"
     },
     "autoload" : {
         "psr-4": {
@@ -17,5 +18,8 @@
     },
     "config": {
         "process-timeout": 1800
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.5"
     }
 }
